--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>Powerful Digital Solutions With Gp<span>.</span></h1>
-          <h2>We are team of talented digital marketers</h2>
+          <h1><span>Lashing</span> and securing of your cargo the right way<span>!</span></h1>
+          <!-- <h2>We are team of talented digital marketers</h2> -->
         </div>
       </div>
 
@@ -327,7 +327,7 @@
                 <h4></h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Transcor are pleased with the level of service that we receive from Lash-rite. We have found them to be prompt, efficient and always professional in their work.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -340,7 +340,7 @@
                 <h4></h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  We have worked with Lash-Rite for a number of years and can state quite happily that the service they provide is 1st class so would not hesitate to recommend Leon and his team to anyone.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -353,7 +353,7 @@
                 <h4></h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  We highly recommend the services of the Lashrite Team. They are always thorough, reliable and on time. The staff will always go the extra mile even if it is not required or part of their duties. Expert advice is given when needed
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
