--- a/gallery.html
+++ b/gallery.html
@@ -31,12 +31,13 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top" style="background: rgba(0, 0, 0, 0.8);">
+   <!-- ======= Header ======= -->
+   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-lg-between">
       <h1 class="logo me-auto me-lg-0">
         <a href="index.html">
-          <img src="assets/img/Lash-Rite-Web-White-Orange1.png" alt="" class="img-fluid">
+          <img id="logo-initial" src="assets/img/logos/Lash_Rite_No RL.png" alt="" class="img-fluid">
+          <img id="logo-scrolled" src="assets/img/logos/Lash_Rite_Logo_RL.png" alt="Scrolled Logo">
         </a>
       </h1>
       <!-- Navbar -->
@@ -69,56 +70,6 @@
 
       </div>
     </section>
-
-    <!-- ======= Portfolio Details Section =======
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-3.jpg" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-          </div>
-
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-              </ul>
-            </div>
-            <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section> -->
 
      <!-- ======= Gallery Section ======= -->
      <section id="portfolio" class="portfolio">
@@ -518,39 +469,38 @@
 
   </main>
 
-<!-- ======= Footer ======= -->
-<footer id="footer">
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-          <div class="custom-footer ">
-            <!-- Logo -->
-            <img src="assets/img/Lash-Rite-Web-White-Orange1.png" alt="" class="custom-footer-img">
-            <!-- Social Media -->
-            <div class="d-flex align-items-center social-links px-0">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            </div>
+ <!-- ======= Footer ======= -->
+ <footer id="footer">
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
+        <div class="custom-footer ">
+          <!-- Logo -->
+          <div class="footer-logo">
+            <!-- <img src="assets/img/Lash-Rite-Web-White-Orange1.png" alt="" class="custom-footer-img"> -->
+            <a href="index.html">
+              <img id="custom-footer-img-logo-scrolled" src="assets/img/logos/Lash_Rite_Logo_RL.png" alt="Scrolled Logo">
+              <img id="custom-footer-img-logo-initial" src="assets/img/logos/Lash_Rite_No RL.png" alt="">
+            </a>
+          </div>
+          <!-- Social Media -->
+          <div class="d-flex align-items-center social-links px-0">
+            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Lash-Rite</span></strong>. All Rights Reserved
-      </div>
-      <!-- <div class="credits">
-        All the links in the footer should remain intact.
-        You can delete the links only if you purchased the pro version.
-        Licensing information: https://bootstrapmade.com/license/
-        Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div> -->
+  <div class="container">
+    <div class="copyright">
+      &copy; Copyright <strong><span>Lash-Rite</span></strong>. All Rights Reserved |<span><a id="terms-conditions" href="term&condition.html">Terms and Conditions</a></span>
     </div>
+  </div>
 </footer>
 
   <div id="preloader"></div>
