--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
   </main>
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
+  <footer id="footer" class="footer-sticky">
     <div class="footer-top">
       <div class="container">
         <div class="row">
@@ -448,7 +448,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Lash-Rite</span></strong>. All Rights Reserved |<span><a id="terms-conditions" href="term&condition.html">Terms and Conditions</a></span>
+        &copy; Copyright <strong><span>Lash-Rite</span></strong>. All Rights Reserved |<span><a id="terms-conditions" href="terms&conditions.html">Terms and Conditions</a></span>
       </div>
     </div>
   </footer>
